--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,8 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css")
 
-/*
-	Prologue by HTML5 UP 
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -1831,6 +1828,12 @@ input, select, textarea {
 			line-height: 2em;
 			text-align: center;
 			border: 0;
+		}
+
+		.linkedin-icon, i .linkedin-icon {
+		  color: rgb(65, 72, 76);
+		  padding: 20%;
+          margin-left: 1%;
 		}
 
 
